--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,6 +1,14 @@
 # .cirrus.yml:
-freebsd_instance:
-  image_family: freebsd-13-2
+compute_engine_instance:
+  # Image list available via
+  # gcloud compute images list --project freebsd-org-cloud-dev --no-standard-images
+  platform: freebsd
+  image_project: freebsd-org-cloud-dev
+  image: freebsd-13-2-release-amd64
+  cpu: 8
+  memory: 8G
+  disk: 40
+
 
 task:
   build:
