--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -5,18 +5,18 @@ compute_engine_instance:
   platform: freebsd
   image_project: freebsd-org-cloud-dev
   image: freebsd-13-2-release-amd64
-  cpu: 8
-  memory: 8G
-  disk: 40
+  cpu: 1
+  memory: 2G
+  disk: 10
 
 
-task:
-  build:
+tasks:
+  download_and_run_script.:
     description: Build and test
-    install_script: pkg install bastille 
-    script: 
-      - echo "Build and test steps go here"
-      - git clonehttps://github.com/BastilleBSD/templates.git
+    freebsd: 
+      - pkg install -y git bastille  
+    script:
+      - git clone https://github.com/BastilleBSD/templates.git
       - cd templates
       - git rev-parse --abbrev-ref HEAD > branch.txt
       - read -r BRANCH <"branch.txt"
