--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -12,33 +12,29 @@ compute_engine_instance:
 
 task:
   download_and_run_script:
-  description: Build and test
-  freebsd: 
-    - pkg install -y git bastille  
+  description: Build and test  
   script:
+    - pkg install -y git bastille
     - git clone https://github.com/BastilleBSD/templates.git
     - cd templates
     - git rev-parse --abbrev-ref HEAD > branch.txt
     - read -r BRANCH <"branch.txt"
     - echo $BRANCH
     - rm branch.txt
-
     - git diff --dirstat main $BRANCH ./* > diff.txt
     - echo "*** diff.txt ***"
     - cat diff.txt
-
     - # Use sed to remove characters before the match pattern
     - match_pattern=" /"
     - sed "s/.*$match_pattern/$match_pattern/" "diff.txt" > changed.txt
     - echo "*** changed.txt ***"
     - cat changed.txt
-
     - read -r CHDIR <"changed.txt"
     - echo $CHDIR
-
+    - bastille create testrun 10.0.0.1
+    - bastille template testrun $CHDIR
     - cd $CHDIR
     - pwd
     - chmod +x ./test.sh
     - ./test.sh
-
 
