--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,8 +1,10 @@
 # .cirrus.yml:
-only_if: $CIRRUS_BRANCH == "main" || CIRRUS_PR != ""    
-env:
-  CIRRUS_CLONE_DEPTH: 1
-  ARCH: amd64
+connected_check_task:
+  name: check branch status
+  only_if: $CIRRUS_BRANCH == "main" || CIRRUS_PR != ""    
+  env:
+    CIRRUS_CLONE_DEPTH: 1
+    ARCH: amd64
 task:
   freebsd_instance:
     image: freebsd-13-2-release-amd64
