--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -6,11 +6,14 @@ task:
   freebsd_instance:
     image: freebsd-13-2-release-amd64
   script:
-    - pkg install -y git bastille
-    - bastille bootstrap 13.2-RELEASE
+    - pkg install -y git 
+    - git clone https://github.com/BastilleBSD/bastille.git
+    - cd bastille
+    - make install
     - cd /usr/local/etc/bastille
     - cp bastille.conf.sample bastille.conf
     - bastille setup
+    - bastille bootstrap 13.2-RELEASE
     - bastille create testrun 13.2-RELEASE 10.0.0.1
     - git clone https://github.com/BastilleBSD/templates.git
     - cd templates
