--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -2,6 +2,10 @@
 env:
   CIRRUS_CLONE_DEPTH: 1
   ARCH: amd64
+jobs:
+  pr-title-check:
+    pr_title="${{ github.event.pull_request.title }}"
+
 task:
   freebsd_instance:
     image: freebsd-13-2-release-amd64
@@ -21,7 +25,7 @@ task:
     - read -r BRANCH <"branch.txt"
     - echo $BRANCH
     - rm branch.txt
-    - git diff --dirstat main $BRANCH ./* > diff.txt
+    - git diff --dirstat main {{ github.ref }} ./* > diff.txt
     - echo "*** diff.txt ***"
     - cat diff.txt
     - # Use sed to remove characters before the match pattern
