--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -19,11 +19,12 @@ task:
     - bastille setup
     - bastille bootstrap 13.2-RELEASE
     - bastille create testrun 13.2-RELEASE 10.0.0.1
+    - bastille list
+    - BRANCH= {{ github.ref }}
     - git clone https://github.com/BastilleBSD/templates.git
     - cd templates
-    - BRANCH= {{ github.ref }}
     - echo $BRANCH
-    - git diff --dirstat main {{ github.ref }} ./* > diff.txt
+    - git diff --dirstat main $BRANCH ./* > diff.txt
     - echo "*** diff.txt ***"
     - cat diff.txt
     - # Use sed to remove characters before the match pattern
