--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -5,11 +5,12 @@ env:
 jobs:
   pr-title-check:
     pr_title="${{ github.event.pull_request.title }}"
-
+    branch="${{ github.ref }}"
 task:
   freebsd_instance:
     image: freebsd-13-2-release-amd64
   script:
+    - echo "branch is $branch"
     - pkg install -y git 
     - git clone https://github.com/BastilleBSD/bastille.git
     - cd bastille
@@ -20,11 +21,10 @@ task:
     - bastille bootstrap 13.2-RELEASE
     - bastille create testrun 13.2-RELEASE 10.0.0.1
     - bastille list
-    - BRANCH= {{ github.ref }}
     - git clone https://github.com/BastilleBSD/templates.git
     - cd templates
-    - echo $BRANCH
-    - git diff --dirstat main $BRANCH ./* > diff.txt
+    - echo " branch is $branch "
+    - git diff --dirstat main $branch ./* > diff.txt
     - echo "*** diff.txt ***"
     - cat diff.txt
     - # Use sed to remove characters before the match pattern
