--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -4,12 +4,11 @@ env:
   ARCH: amd64
 jobs:
   pr-title-check:
-    pr_title="${{ github.event.pull_request.title }}"
-    branch="${{ github.ref }}"
 task:
   freebsd_instance:
     image: freebsd-13-2-release-amd64
   script:
+    - branch=`${{ github.ref }}`
     - echo "branch is $branch"
     - pkg install -y git 
     - git clone https://github.com/BastilleBSD/bastille.git
