--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -8,7 +8,7 @@ task:
   freebsd_instance:
     image: freebsd-13-2-release-amd64
   script:
-    - branch=`${{ github.ref }}`
+    - branch='${{ github.ref }}'
     - echo "branch is $branch"
     - pkg install -y git 
     - git clone https://github.com/BastilleBSD/bastille.git
