--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -2,14 +2,12 @@
 env:
   CIRRUS_CLONE_DEPTH: 1
   ARCH: amd64
-jobs:
-  pr-title-check:
-    branch=${{ github.ref }}
 task:
   freebsd_instance:
     image: freebsd-13-2-release-amd64
   script:
-    - echo "branch is $branch"
+    - export BRANCH=${ github_ref }
+    - echo "branch is $BRANCH"
     - pkg install -y git 
     - git clone https://github.com/BastilleBSD/bastille.git
     - cd bastille
