--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -5,6 +5,7 @@ env:
   ARCH: amd64
   freebsd_instance:
     image: freebsd-13-2-release-amd64
+task:
   script:
     - echo "branch is $BRANCH"
     - pkg install -y git 
