--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -3,10 +3,9 @@ env:
   BRANCH: $GITHUB_REF
   CIRRUS_CLONE_DEPTH: 1
   ARCH: amd64
+task:
   freebsd_instance:
     image: freebsd-13-2-release-amd64
-
-tasks:
   script:
     - echo "branch is $BRANCH"
     - pkg install -y git 
