--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,11 +1,12 @@
 # .cirrus.yml:
 env:
-  BRANCH: $GITHUB_REF
   CIRRUS_CLONE_DEPTH: 1
   ARCH: amd64
 task:
   freebsd_instance:
     image: freebsd-13-2-release-amd64
+  build_trigger: echo "BRANCH=$(GITHUB_REF)" >> $CIRRUS_ENV
+  show_build_trigger: echo $BRANCH
   script:
     - echo "branch is $BRANCH"
     - pkg install -y git 
