--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -22,12 +22,12 @@ task:
     - git clone https://github.com/BastilleBSD/templates.git
     - cd templates
     - echo " branch is $BRANCH "
-    - git diff --dirstat main $BRANCH ./* > diff.txt
+    - git diff --dirstat main $BRANCH ./* >> diff.txt
     - echo "*** diff.txt ***"
     - cat diff.txt
     - # Use sed to remove characters before the match pattern
     - match_pattern=" "
-    - sed "s/*$match_pattern/$match_pattern/" "diff.txt" > changed.txt
+    - sed "s/*$match_pattern/$match_pattern/" "diff.txt" >> changed.txt
     - echo "*** changed.txt ***"
     - cat changed.txt
     - read -r CHDIR <"changed.txt"
