--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -22,7 +22,7 @@ task:
     - git clone https://github.com/BastilleBSD/templates.git
     - cd templates
     - echo " branch is $BRANCH "
-    - git diff --dirstat main $BRANCH ./* >> diff.txt
+    - git diff --dirstat main cicd ./* >> diff.txt
     - echo "*** diff.txt ***"
     - cat diff.txt
     - # Use sed to remove characters before the match pattern
