--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -6,7 +6,6 @@ task:
   freebsd_instance:
     image: freebsd-13-2-release-amd64
   build_trigger: 
-    - echo "TRIGGER=$(GITHUB_SHA)" >> $CIRRUS_ENV
     - echo "BRANCH=$(GITHUB_REF)" >> $CIRRUS_ENV
   show_build_trigger: echo $BRANCH
   script:
@@ -25,8 +24,8 @@ task:
     - git clone https://github.com/BastilleBSD/templates.git
     - cd templates
     - echo " branch is $BRANCH "
-    - git diff --dirstat $BRANCH..$TRIGGER ./* 
-    - git diff --dirstat $BRANCH..$TRIGGER ./* >> diff.txt
+    - git diff --dirstat main..$BRANCH ./* 
+    - git diff --dirstat main..$BRANCH ./* >> diff.txt
     - echo "*** diff.txt ***"
     - cat diff.txt
     - # Use sed to remove characters before the match pattern
