--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -24,7 +24,7 @@ task:
     - git clone https://github.com/BastilleBSD/templates.git
     - cd templates
     - echo " branch is $BRANCH "
-    - git diff --dirstat main..$BRANCH ./* 
+    - git diff --dirstat main..cicd ./* 
     - git diff --dirstat main..$BRANCH ./* >> diff.txt
     - echo "*** diff.txt ***"
     - cat diff.txt
