--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,10 +1,44 @@
-.cirrus.yml:
-freebsd_instance:
-  image_family: freebsd-13-2
+# .cirrus.yml:
+env:
+  CIRRUS_CLONE_DEPTH: 1
+  ARCH: amd64
+task:
+  freebsd_instance:
+    image: freebsd-13-2-release-amd64
+  build_trigger: 
+    - echo "BRANCH=$(GITHUB_REF)" >> $CIRRUS_ENV
+  show_build_trigger: echo $BRANCH
+  script:
+    - echo "branch is $BRANCH"
+    - echo "trigger is $TRIGGER"
+    - pkg install -y git 
+    - git clone https://github.com/BastilleBSD/bastille.git
+    - cd bastille
+    - make install
+    - cd /usr/local/etc/bastille
+    - cp bastille.conf.sample bastille.conf
+    - bastille setup
+    - bastille bootstrap 13.2-RELEASE
+    - bastille create testrun 13.2-RELEASE 10.0.0.1
+    - bastille list
+    - git clone https://github.com/BastilleBSD/templates.git
+    - cd templates
+    - echo " branch is $BRANCH "
+    - git checkout $BRANCH
+    - git diff --dirstat origin/cicd..cicd ./* 
+    - git diff --dirstat main..$BRANCH ./* >> diff.txt
+    - echo "*** diff.txt ***"
+    - cat diff.txt
+    - # Use sed to remove characters before the match pattern
+    - match_pattern=" "
+    - sed "s/*$match_pattern/$match_pattern/" "diff.txt" >> changed.txt
+    - echo "*** changed.txt ***"
+    - cat changed.txt
+    - read -r CHDIR <"changed.txt"
+    - echo $CHDIR
+    - bastille template testrun $CHDIR
+    - cd $CHDIR
+    - pwd
+    - chmod +x ./test.sh
+    - ./test.sh
 
-tasks:
-  build:
-    description: Build and test
-    script:
-      - echo "Build and test steps go here"
-        test.sh
