--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -25,12 +25,12 @@ task:
     - echo " branch is $BRANCH "
     - git checkout $BRANCH
     - git diff --dirstat origin/$BRANCH..$BRANCH ./* 
-    - git diff --dirstat origin/$BRANCH..$BRANCH ./* >> diff.txt
+    - git diff --dirstat origin/$BRANCH..$BRANCH ./* > diff.txt
     - echo "*** diff.txt ***"
     - cat diff.txt
     - # Use sed to remove characters before the match pattern
     - match_pattern=" "
-    - sed "s/*$match_pattern/$match_pattern/" "diff.txt" >> changed.txt
+    - sed "s/*$match_pattern/$match_pattern/" "diff.txt" > changed.txt
     - echo "*** changed.txt ***"
     - cat changed.txt
     - read -r CHDIR <"changed.txt"
