--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -7,9 +7,11 @@ task:
     image: freebsd-13-2-release-amd64
   build_trigger: 
     - echo "BRANCH=$(GITHUB_REF)" >> $CIRRUS_ENV
+    - echo "ORIGIN=$(GITHUB_HEAD_REF)" >> $CIRRUS_ENV
   show_build_trigger: echo $BRANCH
   script:
     - echo "branch is $BRANCH"
+    - echo "origin is $ORIGIN"
     - pkg install -y git 
     - git clone https://github.com/BastilleBSD/bastille.git
     - cd bastille
