--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -7,7 +7,7 @@ task:
     image: freebsd-13-2-release-amd64
   build_trigger: 
     - echo "BRANCH=$(GITHUB_REF)" >> $CIRRUS_ENV
-    - echo "ORIGIN=$(GITHUB_HEAD_REF)" >> $CIRRUS_ENV
+    - echo "GHHEADREF=$(GITHUB_HEAD_REF)" >> $CIRRUS_ENV
     - echo "GHSHA=$(GITHUB_SHA)" >> $CIRRUS_ENV
     - echo "GHBASE=$(GITHUB_BASE_REF)" >> $CIRRUS_ENV
   show_build_trigger: echo $BRANCH
@@ -29,8 +29,9 @@ task:
     - echo " branch is $BRANCH "
     - git checkout $BRANCH
     - git branch
-    - git diff --dirstat $GITHUB_HEAD_REF..$BRANCH ./* 
-    - git diff --dirstat $ORIGIN..$BRANCH ./* > diff.txt
+    - echo "GHSHA is $GHSHA"
+    - git diff --dirstat $(GITHUB_HEAD_REF)..$BRANCH ./* 
+    - git diff --dirstat $(GITHUB_HEAD_REF)..$BRANCH ./* > diff.txt
     - echo "*** diff.txt ***"
     - cat diff.txt
     - # Use sed to remove characters before the match pattern
