--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -20,6 +20,8 @@ task:
     - bastille bootstrap 13.2-RELEASE
     - bastille create testrun 13.2-RELEASE 10.0.0.100
     - bastille list
+    - service pf start
+    - service pf status
     - git clone https://github.com/BastilleBSD/templates.git
     - cd templates
     - echo " branch is $BRANCH "
