--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -11,6 +11,7 @@ task:
   script:
     - echo "branch is $BRANCH"
     - pkg install -y git curl 
+    - echo 'pf_enable="YES"' >> /etc/rc.conf
     - service pf start
     - service pf status
     - git clone https://github.com/BastilleBSD/templates.git
